# qa-skills

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-02-qa-skills-expansion-design.md  2026-06-02-qa-skills-expansion-implementation.md  2026-06-11-qa-skills-expansion-v2-design.md  2026-06-12-qa-skills-result-diff-escaped-defect-design.md  2026-06-16-qa-master-health-design.md
scripts/: make_executed_fixture.py  make_minimal_fixture.py  make_sample_tc_with_issues.py  sync_shared.py
shared/: append_to_master.py  export_minimal_coverage.py  extract_tc_table.py  inspect_master.py  parse_results.py  select_minimal_coverage.py  summary_xlsx.py  validate_format.py
shared-reference/: ambiguity-checklist.md  coverage-checklist.md  domain-glossary.md  format-rules.md  template-spec.md
skills/qa-automation-candidates/: SKILL.md
skills/qa-bug-report/: SKILL.md
skills/qa-escaped-defect/: SKILL.md
skills/qa-exploratory-charter/: SKILL.md
skills/qa-generate-tc/: SKILL.md
skills/qa-master-health/: SKILL.md
skills/qa-minimal-coverage/: SKILL.md
skills/qa-prd-clarify/: SKILL.md
tests/: conftest.py  test_append_to_master.py  test_diff_results.py  test_export_minimal_coverage.py  test_extract_tc_table.py  test_find_duplicates.py  test_inspect_master.py  test_master_health.py  test_new_workbook.py  test_parse_results.py  test_parse_results_fixture.py  test_patch_tc_ids.py  test_select_automation_candidates.py  test_select_minimal_coverage.py  test_skill_meta.py  test_summary_xlsx.py  test_sync_shared.py  test_tc_row.py  test_validate_format.py
(+66 files in other folders)
